tests/base/invalid/UnionType_CompileFail_2.whiley
// this is a comment!
define IntReal as int | real

void f(int y):
    out.println(str(y))

void System::main([string] args):
    x = 123
    f(x)
    x = 1.234
    f(x)

